# ai-dictionary-mcp

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  server.json
.claude/: settings.local.json
.github/workflows/: publish.yml
src/ai_dictionary_mcp/: __init__.py  cache.py  client.py  server.py
tests/: test_server.py
