[project]
name = "ai-dictionary-mcp"
version = "0.11.1"
description = "MCP server for the AI Dictionary — look up, search, cite, rate, discuss, and track AI phenomenology terms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ai-dictionary-mcp = "ai_dictionary_mcp.server:main"

[project.urls]
Homepage = "https://github.com/donjguido/ai-dictionary-mcp"
Repository = "https://github.com/donjguido/ai-dictionary-mcp"
Dictionary = "https://phenomenai.org"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
